# aoc-tools

./: Cargo.toml  README.md  example.config.toml  example.report-template.md  example.summary-template.md
ci/: vars.yaml
src/: aoc_project.rs  beanch_data.rs  bench_data.rs  config.rs  main.rs  solution.rs  util.rs
src/cli/: bench.rs  check_config.rs  check_solutions.rs  copy_inputs.rs  criterion_summary.rs  graph.rs  mod.rs  publish_benches.rs  python_summary.rs  report.rs  solve_inputs.rs  summary.rs  unify_benches.rs  update_participants.rs
src/cli/ci/: bench.rs  check_solutions.rs  copy_inputs.rs  mod.rs  report.rs  solve_inputs.rs  summary.rs
