[package]
name = "aoc-tools"
version = "0.4.2"
edition = "2021"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
description = "A collection of tools for an Advent of Code CI pipeline."
rust-version = "1.70.0"
license = "MIT"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["cargo", "derive", "env", "wrap_help"] }
console = "0.15"
dirs = "5.0.1"
figment = { version = "0.10.10", features = ["env", "toml"] }
itertools = "0.11.0"
minijinja = "1.0.9"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.9.22"
shell-words = "1.1.0"
url = { version = "2.4.1", features = ["serde"] }
walkdir = "2.4.0"
which = "5.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
