[package]
name = "aoc-tools"
version = "3.0.0"
edition = "2021"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
description = "A collection of tools for an Advent of Code CI pipeline."
rust-version = "1.70.0"
license = "MIT"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["cargo", "derive", "env", "wrap_help"] }
comfy-table = "7.1.0"
console = "0.15"
csv = "1.3.0"
dirs = "5.0.1"
figment = { version = "0.10.10", features = ["env", "toml"] }
itertools = "0.11.0"
minijinja = "1.0.9"
plotly_kaleido = { version = "0.8.4", optional = true }
plotly = "0.8.4"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.9.22"
shell-words = "1.1.0"
url = { version = "2.4.1", features = ["serde"] }
walkdir = "2.4.0"
which = "5.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"

[features]
default = []
image_export = ["dep:plotly_kaleido", "plotly/kaleido"]

# ruget has no rustls passthrough
[patch.crates-io]
plotly_kaleido = { git = "https://github.com/mattcl/plotly", branch = "avoid-ruget" }
